--- a/LocalVibes/wwwroot/css/Views/Home/events.css
+++ b/LocalVibes/wwwroot/css/Views/Home/events.css
@@ -11,7 +11,7 @@
 
 .sidebar {
     width: 20%;
-    overflow-y: auto;
+    overflow-y: scroll;
     padding: 1rem;
     background-color: var(--background-dark);
 }
@@ -24,6 +24,62 @@
     height: 100%;
 }
 
+.search-bar {
+    position: sticky;
+    z-index: 10;
+    top: 0;
+    margin-bottom: 1rem;
+    padding: 0.5rem;
+    background-color: transparent;
+}
+
+.search-container {
+    position: relative;
+    width: 100%;
+}
+
+.search-icon {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    pointer-events: none;
+}
+
+#searchEventInput {
+    width: 100%;
+    padding: 0.5rem 0.5rem 0.5rem 2.5rem;
+    border-radius: 5px;
+    font-size: 1rem;
+    background-color: white;
+    color: black;
+    border: 2px solid var(--primary-color);
+}
+
+.filter-container {
+    margin-top: 0.5rem;
+}
+
+#genreFilter {
+    width: 100%;
+    padding: 0.5rem;
+    border: 2px solid var(--primary-color); 
+    border-radius: 5px; 
+    font-size: 1rem;
+    background-color: white;
+    color: black;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    cursor: pointer;
+}
+
+#genreFilter:focus {
+    border-color: #007bff;
+    outline: none; 
+    box-shadow: 0 0 5px #007bff; 
+}
+
 .list-item {
     background-color: white;
     margin-bottom: 3rem;
@@ -31,14 +87,35 @@
     border-radius: 10px;
     border: 2px solid var(--primary-color);
     box-shadow: 0 0 20px var(--primary-color);
+    display: block;
+    cursor: pointer;
+}
+
+.list-item h3{
+    font-weight: bold;
 }
 
 .list-item img {
     width: 100%;
-    height: 150px;
     object-fit: cover;
     border-radius: 5px;
     margin-bottom: 0.5rem;
+}
+
+.genres {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.genre {
+    background-color: var(--primary-color);
+    color: white;
+    font-size: 0.9rem;
+    padding: 0.2rem 0.5rem; 
+    border-radius: 5px; 
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); 
 }
 
 .toggle-buttons {
@@ -59,6 +136,102 @@
 .toggle-buttons button.active {
     background-color: #007bff;
     color: white;
+}
+
+.leaflet-control-layers {
+    font-size: 0.9rem;
+    text-align: left;
+}
+
+.leaflet-control-layers-toggle {
+    width: 2.5vw !important;
+    height: 2.5vw !important;
+    min-width: 50px; 
+    min-height: 50px;
+    background-image: url('/Assets/music-party.svg');
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.leaflet-control-layers-expanded{
+    background-color: var(--background-dark);
+    color: white;
+    width: auto;
+}
+
+.leaflet-control-layers input[type="checkbox"] {
+    width: auto;
+    margin-right: 0.5rem;
+    transform: scale(1.3);
+    cursor: pointer;
+    padding: 0;
+    box-sizing: content-box;
+}
+
+.leaflet-control-layers label {
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+}
+
+/*Popup style*/
+
+.leaflet-popup-content-wrapper {
+    background: linear-gradient(135deg, #1e293b, var(--primary-color)); 
+    border-radius: 10px; 
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3); 
+    color: white;
+    font-family: 'Arial', sans-serif;
+    padding: 10px;
+    border: none;
+}
+
+.leaflet-popup-content {
+    margin: 0;
+    padding: 0;
+    font-size: 0.9rem;
+}
+
+.leaflet-popup-content img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px; 
+    margin-bottom: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.leaflet-popup-content h4 {
+    margin: 0 0 5px 0; 
+    font-size: 1rem;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.leaflet-popup-content p {
+    margin: 0;
+    font-size: 0.85rem;
+    line-height: 1.4;
+    color: #d1d5db;
+}
+
+.leaflet-popup-content .btn {
+    display: inline-block;
+    background: #3b82f6; 
+    color: white;
+    padding: 5px 10px;
+    text-decoration: none;
+    font-size: 0.85rem;
+    border-radius: 5px;
+    margin-top: 10px;
+    text-align: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background 0.3s ease;
+}
+
+.leaflet-popup-content .btn:hover {
+    background: #2563eb; 
 }
 
 @media (max-width: 768px) {
