--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -82,7 +82,7 @@
         </div>
     </nav>
 
-    <div class="py-5 mt-5">
+    <div>
         <main role="main">
             @RenderBody()
         </main>
