--- a/LocalVibes/Views/Home/Events.cshtml
+++ b/LocalVibes/Views/Home/Events.cshtml
@@ -21,41 +21,42 @@
 
 <div class="events-container">
     <div class="sidebar">
-        <div class="search-bar">
-            <div class="search-container">
-                <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                    <circle cx="10" cy="10" r="8" stroke="var(--primary-color)" stroke-width="3" fill="none"></circle>
-                    <line x1="15" y1="15" x2="21" y2="21" stroke="var(--primary-color)" stroke-width="3"></line>
-                </svg>
-                <input type="text" id="searchEventInput" placeholder="Buscar eventos por nombre..." />
-            </div>
-            <div class="filter-container">
-                <select id="genreFilter">
-                    <option value="all">Todos los géneros</option>
-                    @foreach (var genre in Model.Generes)
-                    {
-                        <option value="@genre.GenereMusicName">@genre.GenereMusicName</option>
-                    }
-                </select>
-            </div>
-        </div>
-        <div id="eventsList">
-            @foreach (var evento in Model.Events)
-            {
-                <div class="list-item" data-event-id="@evento.IdEvent">
-                    <img src="data:image/jpg;base64,@Convert.ToBase64String(evento.EventImage)" alt="Jazz Night">
-                    <h3 class="event-title">@evento.EventTitle</h3>
-                    <div class="genres">
-                        @foreach (var genre in evento.GeneresMusic)
-                        {
-                            <span class="genre">@genre.GenereMusicName</span>
-                        }
-                    </div>
-                    <small>Fecha: @evento.EventDate.ToShortDateString()</small>
+        <div class="sidebar-content">
+            <div class="search-bar">
+                <div class="search-container">
+                    <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                        <circle cx="10" cy="10" r="8" stroke="var(--primary-color)" stroke-width="3" fill="none"></circle>
+                        <line x1="15" y1="15" x2="21" y2="21" stroke="var(--primary-color)" stroke-width="3"></line>
+                    </svg>
+                    <input type="text" id="searchEventInput" placeholder="Buscar eventos por nombre..." />
                 </div>
-            }
+                <div class="filter-container">
+                    <select id="genreFilter">
+                        <option value="all">Todos los géneros</option>
+                        @foreach (var genre in Model.Generes)
+                        {
+                            <option value="@genre.GenereMusicName">@genre.GenereMusicName</option>
+                        }
+                    </select>
+                </div>
+            </div>
+            <div id="eventsList">
+                @foreach (var evento in Model.Events)
+                {
+                    <div class="list-item" data-event-id="@evento.IdEvent">
+                        <img src="data:image/jpg;base64,@Convert.ToBase64String(evento.EventImage)" alt="Jazz Night">
+                        <h3 class="event-title">@evento.EventTitle</h3>
+                        <div class="genres">
+                            @foreach (var genre in evento.GeneresMusic)
+                            {
+                                <span class="genre">@genre.GenereMusicName</span>
+                            }
+                        </div>
+                        <small>Fecha: @evento.EventDate.ToShortDateString()</small>
+                    </div>
+                }
+            </div>
         </div>
-
     </div>
     <div class="map-container">
         <div id="map"></div>
