smoother transition home -> map

--- a/LocalVibes/Views/Home/Events.cshtml
+++ b/LocalVibes/Views/Home/Events.cshtml
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="~/css/Views/Home/events.css" />
 </head>
 
-<div class="events-container">
+<div class="events-container fade-in">
     <div class="sidebar">
         <div class="sidebar-content">
             <div class="search-bar">
