--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     <nav class="navbar fixed-top navbar-expand-lg navbar-scroll" style="background-color: rgba(138, 43, 226, 0.90);">
         <div class="container d-flex align-items-center justify-content-between">
             <!-- Logo y Nombre -->
-            <a href="/" class="d-flex align-items-center text-decoration-none me-auto">
+            <a href="@Url.Action("Home", "Home")" class="d-flex align-items-center text-decoration-none me-auto">
                 <img src="~/Assets/Logo-white-sinLetra.png" alt="Logo" class="me-2" width="30" />
                 <span class="text-white fw-bold fs-4">LocalVibes</span>
             </a>
