--- a/LocalVibes/wwwroot/css/Views/Home/events.css
+++ b/LocalVibes/wwwroot/css/Views/Home/events.css
@@ -4,6 +4,21 @@
     overflow: hidden;
 }
 
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 .events-container {
     display: flex;
     height: 100vh;
