sing up container position fixed

--- a/LocalVibes/Views/Authentication/SignUp/_BandForm.cshtml
+++ b/LocalVibes/Views/Authentication/SignUp/_BandForm.cshtml
@@ -31,7 +31,7 @@
         <input asp-for="ProjectImage" type="file" />
         <label asp-for="ProjectImage"></label>
     </div>
-    <button type="submit" class="btn animation" style="--i:31; --j:7">Sign Up</button>
+    <button type="submit" class="btn-form animation" style="--i:31; --j:7">Sign Up</button>
     <div class="logreg-link animation" style="--i:32; --j:8">
         <p>Do you want to register as a user? <a href="#" class="login-link">Sign Up as a user</a></p>
     </div>
