--- a/LocalVibes/Views/Authentication/SignUp/_UserForm.cshtml
+++ b/LocalVibes/Views/Authentication/SignUp/_UserForm.cshtml
@@ -58,7 +58,7 @@
         <input asp-for="ProfileImage" type="file" />
         <label asp-for="ProfileImage"></label>
     </div>
-    <button type="submit" class="btn animation" style="--i:10; --j:33">Sign Up</button>
+    <button type="submit" class="btn-form animation" style="--i:10; --j:33">Sign Up</button>
     <div class="logreg-link animation" style="--i:11; --j:34">
         <p>Are you a band? <a href="#" class="register-link">Sign Up as a band</a></p>
     </div>
