--- a/LocalVibes/Views/Authentication/SignUpShift.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpShift.cshtml
@@ -12,27 +12,27 @@
     
 </head>
 
-<div class="body">
+<div class="signup-container">
     <div class="wrapper">
         <span class="bg-animate"></span>
         <span class="bg-animate2"></span>
 
+        <!--User-->
         <div class="form-box login">
-            <h2 class="animation" style="--i:0; --j:22">User</h2>
             <partial name="SignUp/_UserForm" model="Model.User" />
         </div>
         <div class="info-text login">
-            <h2 class="animation" style="--i:0; --j:20">Welcome!</h2>
-            <p class="animation" style="--i:1; --j:21">Enjoy the music around you and discover new bands</p>
+            <h2 class="animation" style="--i:0; --j:20">Bienvenido!</h2>
+            <p class="animation" style="--i:1; --j:21">Registrate y descubre música local, bandas y eventos inolvidables!</p>
         </div>
+
         <!--Band-->
         <div class="form-box register">
-            <h2 class="animation" style="--i:24; --j:0">Band</h2>
             <partial name="SignUp/_BandForm" model="Model.Band" />
         </div>
         <div class="info-text register">
-            <h2 class="animation" style="--i:24; --j:0">Welcome!</h2>
-            <p class="animation" style="--i:25; --j:1">Enjoy the music around you and discover new bands</p>
+            <h2 class="animation" style="--i:24; --j:0">Bienvenido!</h2>
+            <p class="animation" style="--i:25; --j:1">Conecta con tus fans, haz crecer tu audiencia y promociona tus conciertos!</p>
         </div>
     </div>
     <script src="~/js/SignUp/script.js"></script>
