--- a/LocalVibes/wwwroot/css/Views/SignUp/style.css
+++ b/LocalVibes/wwwroot/css/Views/SignUp/style.css
@@ -1,20 +1,25 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+﻿
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 body {
     max-height: 100vh;
 }
 
-.body {
+.signup-container {
     display: flex;
     justify-content: center;
     align-items: center;
+    min-height: 100vh;
+}
+
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .wrapper {
@@ -233,7 +238,7 @@ input[type="date"]::-ms-clear {
     color: #9b59b6;
 }
 
-.btn {
+.btn-form {
     position: relative;
     width: 100%;
     height: 40px;
@@ -249,7 +254,7 @@ input[type="date"]::-ms-clear {
     overflow: hidden;
 }
 
-.btn::before {
+.btn-form::before {
     content: '';
     position: absolute;
     top: -100%;
@@ -261,7 +266,7 @@ input[type="date"]::-ms-clear {
     transition: .5s;
 }
 
-.btn:hover::before {
+.btn-form:hover::before {
     top: 0;
 }
 
