--- a/LocalVibes/Views/Authentication/SignUpShift.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpShift.cshtml
@@ -8,8 +8,7 @@
 <head>
     <link rel="stylesheet" href="~/css/multiSelect.css" />
     <link rel="stylesheet" href="~/css/Views/SignUp/style.css" />
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>   
 </head>
 
 <div class="signup-container">
@@ -36,4 +35,5 @@
         </div>
     </div>
     <script src="~/js/SignUp/script.js"></script>
+    <script src="~/js/MultiSelect.js"></script>
 </div>
