--- a/LocalVibes/wwwroot/css/Views/SignUp/style.css
+++ b/LocalVibes/wwwroot/css/Views/SignUp/style.css
@@ -27,8 +27,8 @@ footer{
     width: 800px;
     height: 800px;
     background: transparent;
-    border: 2px solid #9b59b6;
-    box-shadow: 0 0 50px #9b59b6;
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 0 50px var(--primary-color);
     overflow: hidden;
 }
 
@@ -150,7 +150,7 @@ input[type="date"]::-ms-clear {
 }
 
 .input-box-image input[data-filled="true"] ~ label {
-    color: #9b59b6;
+    color: var(--primary-color);
 }
 
 .input-box select {
@@ -178,7 +178,7 @@ input[type="date"]::-ms-clear {
 
 .input-box input:focus,
 .input-box input[data-filled="true"] {
-    border-bottom-color: #9b59b6;
+    border: 2px solid var(--primary-color);
 }
 
 .input-box label {
@@ -213,14 +213,15 @@ input[type="date"]::-ms-clear {
 .input-box:has(.multi-select .multiSelect-input) .multiSelect-label,
 .input-box:has(.multi-select-header.multi-select-header-active) .multiSelect-label {
     top: -10px;
-    color: #9b59b6;
+    color: var(--primary-color);
+    font-weight: bold;
     opacity: 1;
 }
 
 .input-box textarea:focus ~ label,
 .input-box textarea[data-filled="true"] ~ label {
     top: -20px;
-    color: #9b59b6;
+    color: var(--primary-color);
     opacity: 1;
 }
 
@@ -235,7 +236,7 @@ input[type="date"]::-ms-clear {
 
 .input-box input:focus ~ i,
 .input-box input[data-filled="true"] ~ i {
-    color: #9b59b6;
+    color: var(--primary-color);
 }
 
 .btn-form {
@@ -243,7 +244,7 @@ input[type="date"]::-ms-clear {
     width: 100%;
     height: 40px;
     background: transparent;
-    border: 2px solid #9b59b6;
+    border: 2px solid var(--primary-color);
     outline: none;
     border-radius: 40px;
     cursor: pointer;
@@ -254,17 +255,17 @@ input[type="date"]::-ms-clear {
     overflow: hidden;
 }
 
-.btn-form::before {
-    content: '';
-    position: absolute;
-    top: -100%;
-    left: 0;
-    width: 100%;
-    height: 300%;
-    background: linear-gradient(#081b29, #9b59b6, #081b29, #9b59b6);
-    z-index: -1;
-    transition: .5s;
-}
+    .btn-form::before {
+        content: '';
+        position: absolute;
+        top: -100%;
+        left: 0;
+        width: 100%;
+        height: 300%;
+        background: linear-gradient(#081b29, var(--primary-color), #081b29, var(--primary-color));
+        z-index: -1;
+        transition: .5s;
+    }
 
 .btn-form:hover::before {
     top: 0;
@@ -278,7 +279,7 @@ input[type="date"]::-ms-clear {
 }
 
 .logreg-link p a {
-    color: #9b59b6;
+    color: var(--primary-color);
     text-decoration: none;
     font-weight: 600;
 }
@@ -363,8 +364,8 @@ input[type="date"]::-ms-clear {
     right: 0;
     width: 1100px;
     height: 1000px;
-    background: linear-gradient(45deg, #081b29, #9b59b6);
-    border-bottom: 3px solid #9b59b6;
+    background: linear-gradient(45deg, #081b29, var(--primary-color));
+    border-bottom: 3px solid var(--primary-color);
     transform: rotate(27deg) skewY(40deg);
     transform-origin: bottom right;
     transition: 1.5s ease;
@@ -382,8 +383,8 @@ input[type="date"]::-ms-clear {
     left: 520px;
     width: 1100px;
     height: 1000px;
-    background: #081b29;
-    border-top: 3px solid #9b59b6;
+    background: var(--background-dark);
+    border-top: 3px solid var(--primary-color);
     transform: rotate(0) skewY(0);
     transform-origin: bottom left;
     transition: 1.5s ease;
