white register color

--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                     <a href="@Url.Action("Artists", "Home")" class="text-white text-decoration-none text-sm">
                         Artistas
                     </a>
-                    <button onclick="window.location.href='/Authentication/SignUpShift'" class="btn btn-outline-light btn-sm" style="color:black">
+                    <button onclick="window.location.href='/Authentication/SignUpShift'" class="btn btn-outline-light btn-sm">
                         Registrarse
                     </button>
                     <button onclick="window.location.href='/Authentication/Login'" class="btn btn-light btn-sm">
