--- a/LocalVibes/Views/Authentication/SignUpShift.cshtml
+++ b/LocalVibes/Views/Authentication/SignUpShift.cshtml
@@ -21,7 +21,7 @@
             <partial name="SignUp/_UserForm" model="Model.User" />
         </div>
         <div class="info-text login">
-            <h2 class="animation" style="--i:0; --j:20">Bienvenido!</h2>
+            <h2 class="animation" style="--i:0; --j:20">Bienvenido Usuario!</h2>
             <p class="animation" style="--i:1; --j:21">Registrate y descubre música local, bandas y eventos inolvidables!</p>
         </div>
 
@@ -30,7 +30,7 @@
             <partial name="SignUp/_BandForm" model="Model.Band" />
         </div>
         <div class="info-text register">
-            <h2 class="animation" style="--i:28; --j:0">Bienvenido!</h2>
+            <h2 class="animation" style="--i:28; --j:0">Bienvenida Banda!</h2>
             <p class="animation" style="--i:29; --j:1">Conecta con tus fans, haz crecer tu audiencia y promociona tus conciertos!</p>
         </div>
     </div>
