--- a/LocalVibes/Views/Authentication/SignUp/_UserForm.cshtml
+++ b/LocalVibes/Views/Authentication/SignUp/_UserForm.cshtml
@@ -6,19 +6,23 @@
         <input asp-for="Username" type="text" />
         <label asp-for="Username"></label>
         <i class="bx bxs-user"></i>
+        <span asp-validation-for="Username" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:2; --j:24">
         <input asp-for="FirstName" type="text" />
         <label asp-for="FirstName"></label>
+        <span asp-validation-for="FirstName" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:3; --j:25">
         <input asp-for="LastName" type="text" />
         <label asp-for="LastName"></label>
+        <span asp-validation-for="LastName" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:4; --j:26">
         <input asp-for="UserEmail" type="email" />
         <label asp-for="UserEmail"></label>
         <i class="bx bxs-envelope"></i>
+        <span asp-validation-for="UserEmail" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:4; --j:27">
         <input asp-for="Phone"
@@ -29,16 +33,19 @@
                oninput="this.value=this.value.replace(/[^0-9]/g,'')" />
         <label asp-for="Phone"></label>
         <i class="bx bxs-phone"></i>
+        <span asp-validation-for="Phone" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:5; --j:28">
         <input asp-for="Password" type="password" />
         <label asp-for="Password"></label>
         <i class="bx bxs-lock-alt"></i>
+        <span asp-validation-for="Password" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:6; --j:29">
         <input asp-for="ConfirmPassword" type="password" />
         <label asp-for="ConfirmPassword"></label>
         <i class="bx bxs-lock-alt"></i>
+        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
     </div>
     <div class="input-box date animation" style="--i:7; --j:30">
         <input asp-for="Birthdate" id="birthdateInput" value="" />
@@ -46,6 +53,7 @@
         <i class="bx bxs-calendar"
            onclick="document.getElementById('birthdateInput').showPicker();"
            style="cursor: pointer"></i>
+        <span asp-validation-for="Birthdate" class="text-danger"></span>
     </div>
     <div class="input-box animation" style="--i:8; --j:31">
         <select asp-for="IdGenere" class="form-control" asp-items="Model.Generes">
@@ -57,6 +65,7 @@
     <div class="input-box-image animation" style="--i:9; --j:32">
         <input asp-for="ProfileImage" type="file" />
         <label asp-for="ProfileImage"></label>
+        <span asp-validation-for="ProfileImage" class="text-danger"></span>
     </div>
     <button type="submit" class="btn-form animation" style="--i:10; --j:33">Registrarse</button>
     <div class="logreg-link animation" style="--i:11; --j:34">
