--- a/LocalVibes/Views/Authentication/Login.cshtml
+++ b/LocalVibes/Views/Authentication/Login.cshtml
@@ -3,55 +3,42 @@
 
 @{
 	ViewData["Title"] = "Login";
-	Layout = null;
 }
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
 	@Html.Partial("_Font")
 	<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
 </head>
-<body>
-	<div class="Login">
-		<div class="Login__left-section">
-			<video autoplay muted loop id="Login__background__video">
-				<source src="~/Assets/IMG_0059.mov" type="video/mp4">
-			</video>
-			<div class="Login__background__shadow">
-			</div>
-			<div class="Login__left-section__logo">
-				<img src="~/Assets/Logo-white.png" asp-append-version="true" alt="Logo" class="Landing__header__logo" width="90px">
-			</div>
+
+<div class="Login">
+	<div class="Login__left-section">
+		<video autoplay muted loop id="Login__background__video">
+			<source src="~/Assets/IMG_0059.mov" type="video/mp4">
+		</video>
+		<div class="Login__background__shadow">
 		</div>
-		<div class="Login__right-section">
-			<h1>Login</h1>
+	</div>
+	<div class="Login__right-section">
+		<div class="wrapper">
+			<h1>Inicia sesión</h1>
 			<form class="Login__form" asp-action="Login" method="post" asp-antiforgery="true">
 
 				<div class="form-group">
-					<app-input asp-for="Username"></app-input>
+					<input asp-for="Username"/>
+					<label asp-for="Username"></label>
+					<span asp-validation-for="Username" class="text-danger"></span>
 				</div>
 				<div class="form-group">
-					<app-input asp-for="Password"
-							   type="password"></app-input>
+					<input asp-for="Password"/>
+					<label asp-for="Password"></label>
+					<span asp-validation-for="Password" class="text-danger"></span>
 				</div>
 
 				<app-button button-text="Entrar" button-type="secondary"></app-button>
 
 			</form>
-
-			<div class="d-flex flex-column justify-content-center align-items-center vh-100">
-				<p class="text-center">
-					¿No tienes cuenta? Regístrate como
-					<br>
-					<div class="d-flex justify-content-center gap-2 mt-2" style="display: flex; justify-content: space-evenly;">
-						<a class="btn btn-secondary rounded-pill" href="/Authentication/SignUpUser">Usuario</a>
-						<a class="btn btn-secondary rounded-pill" href="/Authentication/SignUpProject">Proyecto</a>
-					</div>
-				</p>
-			</div>
 			<div asp-validation-summary="All" class="text-danger"></div>
 		</div>
 	</div>
-</body>
-</html>
+</div>
+
