--- a/LocalVibes/Views/Authentication/Login.cshtml
+++ b/LocalVibes/Views/Authentication/Login.cshtml
@@ -8,6 +8,7 @@
 <head>
 	@Html.Partial("_Font")
 	<link rel="stylesheet" href="~/css/Views/Authentication/Login.css" />
+	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <div class="Login">
@@ -24,17 +25,19 @@
 			<form class="Login__form" asp-action="Login" method="post" asp-antiforgery="true">
 
 				<div class="form-group">
-					<input asp-for="Username"/>
 					<label asp-for="Username"></label>
+					<input asp-for="Username"/>
+					<i class="bx bxs-user"></i>
 					<span asp-validation-for="Username" class="text-danger"></span>
 				</div>
 				<div class="form-group">
-					<input asp-for="Password"/>
 					<label asp-for="Password"></label>
+					<input asp-for="Password"/>
+					<i class="bx bxs-lock-alt"></i>
 					<span asp-validation-for="Password" class="text-danger"></span>
 				</div>
 
-				<app-button button-text="Entrar" button-type="secondary"></app-button>
+				<button class="btn-form">Entrar</button>
 
 			</form>
 			<div asp-validation-summary="All" class="text-danger"></div>
