--- a/LocalVibes/Views/Landing/index.cshtml
+++ b/LocalVibes/Views/Landing/index.cshtml
@@ -14,7 +14,6 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/_Layout.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/Views/Landing/index.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -106,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="map-section">
+                    <div class="map-section-Landing">
                         <div id="map" class="map"></div>
                         <div id='decorative-map' inert></div>
                     </div>
