--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -6,7 +6,7 @@
     --tertiary-color: #D8D8D8; /* Blanco sucio */
     --text-light: #ffffff; /* Texto blanco */
     --text-dark: #000000; /* Texto negro */
-    --border-radius: 8px; /* Bordes redondeados */
+    --border-radius: 999em; /* Bordes redondeados */
     --border-thin: 1px solid #ffffff; /* Bordes finos */
     --font-family: "Poppins", sans-serif; /* Fuente redondeada y moderna */
     --font-optical-sizing: auto;
@@ -36,6 +36,8 @@ body {
     color: var(--text-light);
 }
 
+
+
 /* Botones generales */
 .btn {
     display: inline-block;
@@ -61,6 +63,16 @@ body {
         background-color: #7A1FA2; 
         color: var(--text-light);
         border-color: #7A1FA2;
+    }
+
+.btn-outline-primary {
+    color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+    .btn-outline-primary:hover {
+        background-color: var(--primary-color);
+        color: white;
     }
 
 /* Botón secundario (Amarillo) */
@@ -212,3 +224,161 @@ footer a:hover {
         background-color: #ffd700;
         transform: scale(1.1);
     }
+
+/* Container de contenido */
+.container-contenido {
+    margin: 5rem 0 2rem 0;
+    display: grid;
+    grid-template-columns: 345px 1fr 345px;
+    gap: 2rem;
+    padding: 2rem;
+    min-width: 100%;
+}
+
+/* Etiquetas de generos musicales */
+.genre-tags {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    justify-content: center;
+}
+
+.genre-tag {
+    background-color:var( --primary-color);
+    padding: 0.5rem 1rem;
+    border-radius: 20px;
+    font-size: 0.9rem;
+}
+
+/* Contenido del main */
+.main-content {
+    background-color: #444;
+    padding: 2rem;
+    border-radius: 10px;
+}
+
+    .main-content h2 {
+        margin-bottom: 2rem;
+        text-align: center;
+        font-size: 2rem;
+    }
+
+/* Perfil */
+/* Sección de perfil de la banda */
+.profile-section {
+    background-color: #333;
+    padding: 2rem;
+    border-radius: 8px;
+}
+
+/* Columna de datos del usuario, banda y evento */
+.profile-sidebar {
+    text-align: center;
+}
+
+.profile-name {
+    font-size: 2rem;
+    margin-bottom: 0.5rem;
+}
+
+.profile-date, .profile-points {
+    color: #999;
+    margin-bottom: 1rem;
+}
+
+/* Columna de eventos */
+.events-sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.event-card {
+    background-color: white;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+}
+    .event-card:hover {
+        transform: translateY(-5px);
+    }
+
+    .event-card img {
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+    }
+
+.profile-sidebar, .events-sidebar {
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+/* Banda */
+.band-info {
+    text-align: center;
+    color: #888;
+    margin-bottom: 1rem;
+}
+.profile-name-band {
+    text-align: center;
+}
+
+/* Landing */
+/* Custom Landing */
+.bodyLanding, .htmlLanding {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: content-box;
+}
+
+/* Seccion del titulo */
+.hero-section {
+    padding: 120px 0 80px;
+    text-align: center;
+}
+
+/* Titulo */
+.hero-title {
+    font-size: 3.5rem;
+    font-weight: 700;
+    margin-bottom: 1.5rem;
+    color: white;
+}
+
+/* Subtitulo*/
+.hero-subtitle {
+    font-size: 1.2rem;
+    color: var(--tertiary-color);
+    margin-bottom: 2rem;
+}
+
+/* Seccion de informacion*/
+.features-section {
+    padding: 80px 0;
+    background-color: rgba(216, 216, 216, 0.8);
+    border-radius: 12px;
+}
+
+/* Secciones dentro de la informacion*/
+.feature-item {
+    margin-bottom: 1rem;
+}
+
+/* Icono */
+.feature-icon {
+    font-size: 23px;
+    color: var(--primary-color);
+}
+
+.map-section-Landing {
+    height: 440px;
+    background-color: #f0f0f0;
+    border-radius: 12px;
+}
+
+.map {
+    height: 100%;
+    width: 100%;
+    z-index: 0;
+}
