--- a/LocalVibes/Views/Home/Home.cshtml
+++ b/LocalVibes/Views/Home/Home.cshtml
@@ -29,7 +29,7 @@
         <div class="position-absolute top-50 start-50 translate-middle text-center text-white text-container">
             <h1 class="display-5 fw-bold">Descubre Bandas</h1>
             <p class="lead">Conecta con tus artistas favoritos y descubre nuevas bandas emergentes.</p>
-            <a href="#" class="btn btn-primary action-button">Explorar Bandas</a>
+            <a href="@Url.Action("ExploreBands", "Home")" class="btn btn-primary action-button">Explorar Bandas</a>
         </div>
     </div>
 </div>
