--- a/LocalVibes/Views/Home/ExploreBands.cshtml
+++ b/LocalVibes/Views/Home/ExploreBands.cshtml
@@ -12,7 +12,7 @@
         <ul>
             @foreach (var project in Model.FavoriteProjects)
             {
-                <li class="favorite-item" onclick="window.location.href='@Url.Action("Details", "Bands", new { id = project.IdProject })'">
+                <li class="favorite-item" onclick="window.location.href='@Url.Action("Project", "Profile", new { id = project.IdProject })'">
                     <img src="data:image/jpg;base64,@Convert.ToBase64String(project.ProjectImage)" alt="Project Image" class="group-image">
                     <span class="project-name">@project.ProjectName</span>
                 </li>
@@ -20,7 +20,6 @@
         </ul>
     </div>
 
-    <!-- Contenedor Principal: Lista de Proyectos -->
     <div class="content">
         <!-- Barra de Búsqueda -->
         <div class="search-bar">
@@ -37,7 +36,7 @@
                         <img src="data:image/jpg;base64,@Convert.ToBase64String(project.ProjectImage)" alt="Project Image">
                         <div class="project-info">
                             <h4>@project.ProjectName</h4>
-                            <button class="btn-view-more">Ver más</button>
+                            <button class="btn-view-more" onclick="location.href='@Url.Action("Project", "Profile", new { id = project.IdProject })'">Ver más</button>
                         </div>
                     </div>
                 }
