--- a/LocalVibes/wwwroot/css/Views/Home/bands.css
+++ b/LocalVibes/wwwroot/css/Views/Home/bands.css
@@ -12,6 +12,21 @@
     height: 100vh;
 }
 
+.fade-in {
+    opacity: 0;
+    animation: fadeIn 1s forwards;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
 /* Barra Izquierda (Sidebar) */
 .sidebar {
     width: 20%;
