--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -12,7 +12,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewData["Title"]</title>
-	<link rel="stylesheet" href="~/css/Views/Profile/Project.css" />
+	<link rel="stylesheet" href="~/css/Views/Profile/Project.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/Views/Shared/Avatar.css" asp-append-version="true" />
 	<!-- Otros enlaces de CSS ya definidos -->
 </head>
 <body class="bodyWhite">
@@ -46,13 +48,12 @@
 
 		<!-- Miembros de la banda -->
 		<div class="band-content">
-			<h2 class="section-title">Miembros de @Model.Project.ProjectName</h2>
-			<div class="main-content" style="padding: 0;">
+			<h2 class="section-title" style="margin-top: 2rem;">Miembros de @Model.Project.ProjectName</h2>
+			<div class="band-grid">
 				@if (Model.Project?.MembersOfProjects?.Any() == true)
 				{
 					@foreach (var member in Model.Project.MembersOfProjects)
 					{
-						
 						<div class="band-card">
 							@if (member.MemberImage == null)
 							{
@@ -60,30 +61,27 @@
 							}
 							else
 							{
-								<img src="data:image/jpg;base64,@Convert.ToBase64String(member.MemberImage)" alt="@member.MemberImage" />
+								<img src="data:image/jpg;base64,@Convert.ToBase64String(member.MemberImage)" alt="@member.MemberName" />
 							}
 							<div class="band-card-content">
 								<div>
 									<h5 class="band-card-title" style="font-size: 1em;">@member.MemberName</h5>
-									<p class="band-card-date" style="font-size: 0.7em;">@string.Join("Instrumento: ", member.Instruments.Select(i => i.NameInstrument))</p>
+									<p class="band-card-date" style="font-size: 0.7em;">
+										@string.Join(", ", member.Instruments.Select(i => i.NameInstrument))
+									</p>
 								</div>
 							</div>
 						</div>
-
-						@if (member != Model.Project?.MembersOfProjects?.Last())
-						{
-							<br />
-
-						}
 					}
 				}
 				else
 				{
 					<p>No hay miembros disponibles.</p>
 				}
+
 			</div>
 
-			<h2 class="section-title">Próximos Eventos</h2>
+			<h2 class="section-title" style="margin-top: 2rem;">Próximos Eventos</h2>
 			@if (Model.Project.EventsProject != null && Model.Project.EventsProject.Any())
 			{
 				foreach (var evento in Model.Project.EventsProject)
