--- a/LocalVibes/wwwroot/css/Views/Profile/Project.css
+++ b/LocalVibes/wwwroot/css/Views/Profile/Project.css
@@ -1,6 +1,3 @@
-
-
-
 /* Miembros de la banda */
 .band-content {
     background-color: #444;
@@ -8,12 +5,18 @@
     border-radius: 8px;
 }
 
+.band-grid {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 1rem;
+    margin-top: 1rem;
+}
 
 .band-card {
     background-color: var(--tertiary-color);
     border-radius: 8px;
     overflow: hidden;
-    width: 340px;
+    width: 250px;
     border: 1px solid rgba(0, 0, 0, .125);
 }
 
