--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -269,6 +269,7 @@ footer a:hover {
     background-color: #333;
     padding: 2rem;
     border-radius: 8px;
+    text-align: center;
 }
 
 /* Columna de datos del usuario, banda y evento */
