Registrarse color blanco

--- a/LocalVibes/Views/Shared/_Layout.cshtml
+++ b/LocalVibes/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
                 }
                 else
                 {
-                    <button onclick="window.location.href='/Authentication/SignUpShift'" class="btn btn-outline-light btn-sm" style="color:black">
+                    <button onclick="window.location.href='/Authentication/SignUpShift'" class="btn btn-outline-light btn-sm">
                         Registrarse
                     </button>
                     <button onclick="window.location.href='/Authentication/Login'" class="btn btn-light btn-sm">
