--- a/LocalVibes/wwwroot/css/Views/Profile/Project.css
+++ b/LocalVibes/wwwroot/css/Views/Profile/Project.css
@@ -3,11 +3,12 @@
     background-color: #444;
     padding: 2rem;
     border-radius: 8px;
+    max-width: 100%;
 }
 
 .band-grid {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(3,1fr);
     gap: 1rem;
     margin-top: 1rem;
 }
