--- a/LocalVibes/Views/Profile/User.cshtml
+++ b/LocalVibes/Views/Profile/User.cshtml
@@ -6,15 +6,13 @@
 	Layout = "_Layout";
 }
 
-<!DOCTYPE html>
-<html lang="en">
-
 <!--Importaciones y declaraciones en el head-->
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>@ViewData["Title"]</title>
 	@Html.Partial("_Font")
+	<link rel="stylesheet" src="~~/css/Profile/User"/>
 </head>
 
 <body class="bodyWhite">
@@ -113,4 +111,4 @@
 		</div>
 	</div>
 </body>
-</html>
+
