--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" href="~/css/Views/Profile/Project.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/css/Views/Shared/Avatar.css" asp-append-version="true" />
+	<link rel="stylesheet" href="~/css/Views/Shared/ReviewCard.css" asp-append-version="true" />
 	<!-- Otros enlaces de CSS ya definidos -->
 </head>
 <body class="bodyWhite">
