--- a/LocalVibes/Views/Shared/_ReviewCard.cshtml
+++ b/LocalVibes/Views/Shared/_ReviewCard.cshtml
@@ -5,10 +5,10 @@
         @Html.Partial("_Avatar", new AvatarModel { Size = "40px", Image = @Model.Review.User.ProfileImage})
         <div>
             <div>
-                <span>@Model.Review.User.UserName</span>
+                <span class="ReviewCard__header__username">@Model.Review.User.UserName</span>
                 <span class="ReviewCard__header__date">@Model.Review.ReviewDate.ToString("dd/MM/yyyy")</span>
             </div>
-            <div>
+            <div class="ReviewCard__stars">
                 @for (int i = 1; i <= 5; i++)
                 {
                     if (i <= Model.Review.Rating)
