--- a/LocalVibes/wwwroot/css/Views/Home/events.css
+++ b/LocalVibes/wwwroot/css/Views/Home/events.css
@@ -25,7 +25,7 @@
 }
 
 .sidebar {
-    width: 20%;
+    width: 25%;
     overflow-y: scroll;
     padding: 1rem;
     background-color: var(--background-dark);
@@ -37,6 +37,7 @@
 
 #map {
     height: 100%;
+    overflow-x: auto;
 }
 
 .search-bar {
