--- a/LocalVibes/wwwroot/css/Views/Profile/Project.css
+++ b/LocalVibes/wwwroot/css/Views/Profile/Project.css
@@ -85,7 +85,7 @@
     gap: 5px;
 }
 
-.favorite-section {
+.favorite-form {
     display: flex;
     justify-content: center;
     margin: 1rem 0;
@@ -98,7 +98,7 @@
     font-size: 1rem;
     font-weight: bold;
     color: #fff;
-    background-color: #ff5252;
+    background-color: limegreen;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -106,7 +106,7 @@
 }
 
     .favorite-button:hover {
-        background-color: #e04848;
+        background-color: green;
     }
 
     .favorite-button:focus {
