--- a/LocalVibes/Views/Home/Events.cshtml
+++ b/LocalVibes/Views/Home/Events.cshtml
@@ -10,6 +10,7 @@
         e.EventTitle,
         e.EventDescription,
         e.Location,
+        e.GeneresMusic,
         EventImage = "data:image/jpg;base64," + Convert.ToBase64String(e.EventImage)
     }));
 }
@@ -65,7 +66,7 @@
 <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 <script src='https://unpkg.com/wicg-inert@latest/dist/inert.min.js'></script>
 <script>
-    var generes = @Html.Raw(generesJson);
+    var musicGenres = @Html.Raw(generesJson);
     var events = @Html.Raw(eventsJson);
     const eventUrl = '@Url.Action("Event", "Profile", new { id = "__PLACEHOLDER__" })';
 </script>
