--- a/LocalVibes/wwwroot/css/Views/Profile/Project.css
+++ b/LocalVibes/wwwroot/css/Views/Profile/Project.css
@@ -6,6 +6,24 @@
     max-width: 100%;
 }
 
+.toggle-button {
+    background: none;
+    border: none;
+    font-size: 2rem;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    padding: 0;
+    color: white;
+}
+
+.toggle-icon {
+    font-size: 1.2rem;
+    margin-right: 0.5rem; /* Espacio entre la flecha y el texto */
+    transition: transform 0.3s ease; /* Suaviza la rotación */
+}
+
 .band-grid {
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -71,6 +89,7 @@
     font-size: 2rem;
     margin-bottom: 2rem;
     color: #fff;
+    font-weight: bold;
 }
 
 /* Estrellas para la calificación */
