Cambios en eventos

--- a/LocalVibes/Views/Profile/Project.cshtml
+++ b/LocalVibes/Views/Profile/Project.cshtml
@@ -119,7 +119,7 @@
 
 		<!-- Reseñas -->
 		<div>
-			<h2>REVIEWS</h2>
+			<h2>Reseñas</h2>
 			@if (Model.Project.Reviews != null && Model.Project.Reviews.Any())
 			{
 				foreach (var review in Model.Project.Reviews)
