--- a/LocalVibes/wwwroot/css/Views/Home/events.css
+++ b/LocalVibes/wwwroot/css/Views/Home/events.css
@@ -245,6 +245,19 @@
     transition: background 0.3s ease;
 }
 
+.event-title {
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+.event-description {
+    background-color: #333;
+    padding: 2rem;
+    border-radius: 8px;
+    margin-bottom: 2rem;
+    color: white;
+}
+
 .leaflet-popup-content .btn:hover {
     background: #2563eb; 
 }
