--- a/LocalVibes/wwwroot/css/site.css
+++ b/LocalVibes/wwwroot/css/site.css
@@ -243,13 +243,15 @@ footer a:hover {
     flex-wrap: wrap;
     gap: 0.5rem;
     justify-content: center;
+    color: white;
 }
 
 .genre-tag {
-    background-color:var( --primary-color);
+    background-color:var(--primary-color);
     padding: 0.5rem 1rem;
     border-radius: 20px;
     font-size: 0.9rem;
+    text-align: center;
 }
 
 /* Contenido del main */
@@ -289,6 +291,11 @@ footer a:hover {
     margin-bottom: 1rem;
 }
 
+.profile-image {
+    border-radius: 50%; /* Hace que la imagen sea redonda */
+    object-fit: cover; /* Ajusta la imagen al contenedor, recortando si es necesario */
+}
+
 /* Columna de eventos */
 .events-sidebar {
     display: flex;
@@ -323,6 +330,7 @@ footer a:hover {
     color: #888;
     margin-bottom: 1rem;
 }
+
 .profile-name-band {
     text-align: center;
 }
